--- a/articulos.html
+++ b/articulos.html
@@ -60,7 +60,12 @@
     <header class="text-center">
       <h1>Lista de artículos</h1>
     </header>
+    <div id="alerta"></div>
     <section class="container">
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" id="btnNuevo">
+        Nuevo Artículo
+      </button>
       <div class="row" id="listado">
         
       </div>
@@ -93,6 +98,65 @@
         <p>La Comercial - Todos los derechos reservados - 2023</p>
       </div>
     </footer>
+    <!-- Modal -->
+    <div class="modal fade" id="formularioModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <form id="formulario" enctype="multipart/form-data">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Artículo</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="container-fluid" id="modalContent">
+                <div class="row">
+                  <div class="col-md-5">
+                    <img src="./imagenes/productos/nodisponible.png" alt="Imagen no disponible" id="frmimagen" style="width: 100%;" />
+                  </div>
+                  <div class="col-md-7">
+                    <div class="row">
+                      <div class="form-floating mb-3">
+                        <input type="number" name="codigo" id="codigo" class="form-control" placeholder="Código" />
+                        <label for="codigo">Código</label>
+                      </div>
+                      <div class="form-floating">
+                        <input type="text" name="nombre" id="nombre" class="form-control" placeholder="Nombre" />
+                        <label for="nombre">Nombre</label>
+                      </div>
+                      <div class="form-floating">
+                        <textarea name="descripcion" id="descripcion" class="form-control" placeholder="Descripción"></textarea>
+                        <label for="descripcion">Descripción</label>
+                      </div>
+                      <div class="input-group mb-3">
+                        <span class="input-group-text">$</span>
+                        <div class="form-floating">
+                          <input type="number" name="precio" id="precio" class="form-control" placeholder="Precio" />
+                          <label for="precio">Precio</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="imagen" class="form-label"
+                        >Seleccionar imagen</label
+                      >
+                      <input class="form-control" type="file" id="imagen" name="imagen" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                Cerrar
+              </button>
+              <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">
+                Guardar
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
